fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,7 +310,6 @@ input::-webkit-input-placeholder {
 #rpg,
 #info {
     margin-left: 3%;
-    margin-right: 3%;
 }
 
 #rgb {
